Add missing newline

--- a/course1/session2/kadenze_mir_c1_s2_7_mag_spectrum_star_wars.ipynb
+++ b/course1/session2/kadenze_mir_c1_s2_7_mag_spectrum_star_wars.ipynb
@@ -276,7 +276,7 @@
     "window_size = 4096\n",
     "frame_index = 0\n",
     "sx = x[frame_index * window_size: (frame_index+1)*window_size]\n",
-    "wx = np.hanning(window_size)",
+    "wx = np.hanning(window_size)\n",
     "wsx = np.multiply(sx,wx)\n",
     "plt.figure()\n",
     "plt.plot(sx)\n",
