--- a/course1/session1/kadenze_mir_c1_s1_7_sinusoids.ipynb
+++ b/course1/session1/kadenze_mir_c1_s1_7_sinusoids.ipynb
@@ -67,7 +67,6 @@
     "# generate a discrete time sine signal with a specified amplitude, frequency, duration, and \n",
     "# phase \n",
     "def sinusoid(freq=440.0, dur=1.0, srate=44100.0, amp=1.0, phase = 0.0): \n",
-    "    t = np.linspace(0,dur,int(srate*dur))\n",
     "    data = amp * np.sin(2*np.pi*freq *t+phase)\n",
     "    return data\n",
     "\n",
@@ -222,7 +221,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
